@startuml ES School Management System

' Style settings
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    ArrowColor #666666
    BorderColor #666666
}

' Base User class
class User {
    +email: string
    +password: string
    +first_name: string
    +last_name: string
    +add_role(role)
    +has_role?(role)
}

' Role class
class Role {
    +name: string
}

' Student class
class Student {
    +state: enum
    +is_archived: boolean
    +user_id: integer
    +classroom_id: integer
    +belongs_to :user
    +belongs_to :classroom
    +has_many :grades
}

' Teacher class
class Teacher {
    +IBAN: string
    +state: enum
    +is_archived: boolean
    +user_id: integer
    +belongs_to :user
    +has_many :courses
}

' Classroom class
class Classroom {
    +name: string
    +is_archived: boolean
    +teacher_id: integer
    +class_type_id: integer
    +room_id: integer
    +quarter_id: integer
    +belongs_to :teacher
    +belongs_to :class_type
    +belongs_to :room
    +belongs_to :quarter
    +has_many :students
    +has_many :courses
}

' Course class
class Course {
    +weekday: enum
    +start_time: time
    +end_time: time
    +is_archived: boolean
    +classroom_id: integer
    +theme_id: integer
    +teacher_id: integer
    +belongs_to :classroom
    +belongs_to :theme
    +belongs_to :teacher
    +has_many :grades
}

' Grade class
class Grade {
    +grade: decimal
    +grading_date: date
    +is_archived: boolean
    +student_id: integer
    +course_id: integer
    +teacher_id: integer
    +belongs_to :student
    +belongs_to :course
    +belongs_to :teacher
}

' Theme class
class Theme {
    +module_name: string
    +module_description: string
    +is_archived: boolean
    +has_many :courses
}

' Room class
class Room {
    +name: string
    +building: string
    +floor: integer
    +capacity: integer
    +is_archived: boolean
    +has_many :classrooms
}

' Quarter class
class Quarter {
    +name: string
    +start_date: date
    +end_date: date
    +is_archived: boolean
    +has_many :classrooms
}

' ClassType class
class ClassType {
    +name: string
    +description: string
    +is_archived: boolean
    +has_many :classrooms
}

' Relationships
User "1" -- "1" Student : has
User "1" -- "1" Teacher : has
User "n" -- "n" Role : has

Student "n" -- "1" Classroom : belongs to
Teacher "1" -- "n" Classroom : teaches
Classroom "n" -- "1" Room : has
Classroom "n" -- "1" Quarter : belongs to
Classroom "n" -- "1" ClassType : has

Classroom "1" -- "n" Course : has
Course "n" -- "1" Theme : has
Course "n" -- "1" Teacher : teaches
Course "1" -- "n" Grade : has

Student "1" -- "n" Grade : has
Teacher "1" -- "n" Grade : grades

@enduml 